@@ -391,7 +391,7 @@ Return a list of up to 256 color elements that represent the indexed colors
 used in an 8bit Surface. The returned list is a copy of the palette, and 
 changes will have no effect on the Surface.
 
-Returning a list of Color instances instead of tuples, New in pygame 1.9.0
+Returning a list of Color(with length 3) instances instead of tuples, New in pygame 1.9.0
 <END>
 
 
@@ -403,7 +403,7 @@ Surface.get_palette_at(index): return RGB
 Returns the red, green, and blue color values for a single index in a Surface
 palette. The index should be a value from 0 to 255.
 
-Returning Color instance instead of a tuple, New in pygame 1.9.0
+Returning Color(with length 3) instance instead of a tuple, New in pygame 1.9.0
 <END>
 
 
